--- a/src/ci/env.tmpl
+++ b/src/ci/env.tmpl
@@ -1,12 +1,13 @@
 COMPOSE_FILE=ci-docker-compose.yml
 
 # DRONE
-DRONE_USER_CREATE=ciadmin:@DRONE_ADMIN_PASSWORD,machine:false,admin:true
-DRONE_GIT_USERNAME=ciagent
+DRONE_USER_CREATE=@DRONE_ADMIN_USERNAME:@DRONE_ADMIN_PASSWORD,machine:false,admin:true
+DRONE_GIT_USERNAME=@DRONE_GIT_USERNAME
 DRONE_GIT_PASSWORD=@DRONE_GIT_PASSWORD
 DRONE_GOGS_SERVER=https://git.@YOUR_DOMAIN
 DRONE_RUNNER_CAPACITY=3
 DRONE_SERVER_HOST=ci.@YOUR_DOMAIN
+DRONE_SECRET_SECRET=@DRONE_SECRET_KEY
 
 # STORAGE
 DRONE_DATA=@DRONE_DATA
@@ -14,9 +15,10 @@ DRONE_MYSQL_DATA=@DRONE_MYSQL_DATA
 
 # NETWORK
 DRONE_HTTP_PORT=10380
+DRONE_MYSQL_PORT=10306
+DRONE_VAULT_PLUGIN_PORT=10300
 
 # MYSQL
-DRONE_MYSQL_PORT=10306
 DRONE_MYSQL_DATABASE=drone
 DRONE_MYSQL_USER=drone
 DRONE_MYSQL_USER_PASSWORD=9R0n6
