corrected env variable name

--- a/src/ci/env.tmpl
+++ b/src/ci/env.tmpl
@@ -7,7 +7,7 @@ DRONE_GIT_PASSWORD=@DRONE_GIT_PASSWORD
 DRONE_GOGS_SERVER=https://git.@YOUR_DOMAIN
 DRONE_RUNNER_CAPACITY=3
 DRONE_SERVER_HOST=ci.@YOUR_DOMAIN
-DRONE_SECRET_SECRET=@DRONE_SECRET_KEY
+DRONE_SECRET_KEY=@DRONE_SECRET_KEY
 
 # STORAGE
 DRONE_DATA=@DRONE_DATA
