--- a/src/ci/env.tmpl
+++ b/src/ci/env.tmpl
@@ -1,7 +1,7 @@
 COMPOSE_FILE=ci-docker-compose.yml
 
 # DRONE
-DRONE_USER_CREATE=username:@DRONE_ADMIN_USERNAME,machine:true,admin:true,token:@DRONE_ADMIN_TOKEN
+DRONE_USER_CREATE=username:@DRONE_ADMIN_USERNAME,admin:true,token:@DRONE_ADMIN_TOKEN
 DRONE_GIT_USERNAME=@DRONE_GIT_USERNAME
 DRONE_GIT_PASSWORD=@DRONE_GIT_PASSWORD
 DRONE_GOGS_SERVER=https://git.@YOUR_DOMAIN
