corrected vault integration setting and documentation

--- a/src/ci/env.tmpl
+++ b/src/ci/env.tmpl
@@ -9,6 +9,12 @@ DRONE_RUNNER_CAPACITY=3
 DRONE_SERVER_HOST=ci.@YOUR_DOMAIN
 DRONE_SECRET_KEY=@DRONE_SECRET_KEY
 
+# VAULT PLUGIN
+VAULT_SERVER=https://vault.@YOUR_DOMAIN
+VAULT_TOKEN=@VAULT_TOKEN
+VAULT_TOKEN_RENEWAL=720h
+VAULT_TOKEN_TTL=720h
+
 # STORAGE
 DRONE_DATA=@DRONE_DATA
 DRONE_MYSQL_DATA=@DRONE_MYSQL_DATA
