--- a/src/ci/env.tmpl
+++ b/src/ci/env.tmpl
@@ -7,10 +7,10 @@ DRONE_GIT_PASSWORD=@DRONE_GIT_PASSWORD
 DRONE_GOGS_SERVER=https://git.@YOUR_DOMAIN
 DRONE_RUNNER_CAPACITY=3
 DRONE_SERVER_HOST=ci.@YOUR_DOMAIN
-DRONE_SECRET_KEY=@DRONE_SECRET_KEY
+DRONE_SECRET=@DRONE_SECRET
 
 # VAULT PLUGIN
-VAULT_SERVER=https://vault.@YOUR_DOMAIN
+VAULT_ADDR=https://vault.@YOUR_DOMAIN
 VAULT_TOKEN=@VAULT_TOKEN
 VAULT_TOKEN_RENEWAL=720h
 VAULT_TOKEN_TTL=720h
