Docker registry configuration and configurable ports.

--- a/src/ci/env.tmpl
+++ b/src/ci/env.tmpl
@@ -7,7 +7,7 @@ DRONE_GIT_PASSWORD=@DRONE_GIT_PASSWORD
 DRONE_GOGS_SERVER=https://git.@YOUR_DOMAIN
 DRONE_RUNNER_CAPACITY=3
 DRONE_SERVER_HOST=ci.@YOUR_DOMAIN
-DRONE_SECRET=@DRONE_SECRET
+DRONE_SECRET_KEY=@DRONE_SECRET_KEY
 
 # VAULT PLUGIN
 VAULT_ADDR=https://vault.@YOUR_DOMAIN
@@ -20,9 +20,9 @@ DRONE_DATA=@DRONE_DATA
 DRONE_MYSQL_DATA=@DRONE_MYSQL_DATA
 
 # NETWORK
-DRONE_HTTP_PORT=10380
-DRONE_MYSQL_PORT=10336
-DRONE_VAULT_PLUGIN_PORT=10300
+DRONE_HTTP_PORT=@DRONE_HTTP_PORT
+DRONE_MYSQL_PORT=@DRONE_HTTP_PORT
+DRONE_VAULT_PLUGIN_PORT=@DRONE_VAULT_PLUGIN_PORT
 
 # MYSQL
 DRONE_MYSQL_DATABASE=drone
