--- a/src/git/env.tmpl
+++ b/src/git/env.tmpl
@@ -5,11 +5,11 @@ GOGS_DATA=@GOGS_DATA
 GOGS_MYSQL_DATA=@GOGS_MYSQL_DATA
 
 # NETWORK
-GOGS_SSH_PORT=10022
-GOGS_HTTP_PORT=10080
+GOGS_SSH_PORT=@GOGS_SSH_PORT
+GOGS_HTTP_PORT=@GOGS_HTTP_PORT
 
 # MYSQL
-GOGS_MYSQL_PORT=10036
+GOGS_MYSQL_PORT=@GOGS_MYSQL_PORT
 GOGS_MYSQL_DATABASE=gogs
 GOGS_MYSQL_USER=gogs
 GOGS_MYSQL_USER_PASSWORD=g09z
