--- a/src/vault/env.tmpl
+++ b/src/vault/env.tmpl
@@ -7,5 +7,5 @@ VAULT_CONSUL_CONFIG=@VAULT_CONSUL_CONFIG
 VAULT_CONSUL_DATA=@VAULT_CONSUL_DATA
 
 # NETWORK
-VAULT_PORT=10280
-CONSUL_PORT=10285
+VAULT_PORT=@VAULT_PORT
+CONSUL_PORT=@CONSUL_PORT
