--- a/src/packages/env.tmpl
+++ b/src/packages/env.tmpl
@@ -3,11 +3,12 @@ COMPOSE_FILE=registry_docker_compose.yml
 # STORAGE
 PROGET_PACKAGES=@PROGET_PACKAGES
 PROGET_EXTENSIONS=@PROGET_EXTENSIONS
+PROGET_CONFIG=@PROGET_CONFIG
 PROGET_POSTGRESQL_DATA=@PROGET_POSTGRESQL_DATA
 
 # NETWORK
-PROGET_HTTP_PORT=10180
-PROGET_POSTGRES_PORT=10132
+PROGET_HTTP_PORT=@PROGET_HTTP_PORT
+PROGET_POSTGRESQL_PORT=@PROGET_POSTGRESQL_PORT
 
 # DB
 PROGET_POSTGRESQL_DATABASE=proget
