Directly mounting volumes in order to get it to work properly for now.

--- a/src/project/env.tmpl
+++ b/src/project/env.tmpl
@@ -1,4 +1,4 @@
-COMPOSE_FILE=project_docker_compose
+COMPOSE_FILE=project_docker_compose.yml
 
 #TAIGA
 
@@ -35,7 +35,7 @@ RABBIT_VHOST=taiga
 #STORAGE
 
 STORAGE_TAIGA_BACK=@STORAGE_TAIGA_BACK
-STORAGE_TAIGA_BACK-MEDIA=@STORAGE_TAIGA-BACK_MEDIA
+STORAGE_TAIGA_BACK-MEDIA=@STORAGE_TAIGA_BACK_MEDIA
 STORAGE_TAIGA_FRONT=@STORAGE_TAIGA_FRONT
 STORAGE_TAIGA_DB=@STORAGE_TAIGA_DB
 STORAGE_TAIGA_PROXY=@STORAGE_TAIGA_PROXY
