--- a/src/registry/env.tmpl
+++ b/src/registry/env.tmpl
@@ -1,3 +1,5 @@
+COMPOSE_FILE=registry_docker_compose.yml
+
 # STORAGE
 REGISTRY_DATA=@REGISTRY_DATA
 REGISTRY_CONFIG_FILE=@REGISTRY_CONFIG/config.yml
