--- a/src/registry/env.tmpl
+++ b/src/registry/env.tmpl
@@ -2,8 +2,7 @@ COMPOSE_FILE=registry_docker_compose.yml
 
 # STORAGE
 REGISTRY_DATA=@REGISTRY_DATA
-REGISTRY_CONFIG_FILE=@REGISTRY_CONFIG/config.yml
-REGISTRY_PASSWORD_FILE=@REGISTRY_CONFIG/htpasswd
+REGISTRY_CONFIG=@REGISTRY_CONFIG
 
 #NETWORK
 REGISTRY_PORT=@REGISTRY_PORT
