--- a/src/registry/config.tmpl
+++ b/src/registry/config.tmpl
@@ -13,7 +13,7 @@ http:
   addr: :5000
   headers:
     X-Content-Type-Options: [nosniff]
-    Access-Control-Allow-Origin: ['https//registryui.@YOUR_DOMAIN']
+    Access-Control-Allow-Origin: ['https://registryui.@YOUR_DOMAIN']
     Access-Control-Allow-Methods: ['HEAD', 'GET', 'OPTIONS', 'DELETE']
     Access-Control-Allow-Headers: ['Authorization']
     Access-Control-Max-Age: [1728000]
