fixed port variables mapping for Drone

--- a/src/ci/env.tmpl
+++ b/src/ci/env.tmpl
@@ -21,7 +21,7 @@ DRONE_MYSQL_DATA=@DRONE_MYSQL_DATA
 
 # NETWORK
 DRONE_HTTP_PORT=@DRONE_HTTP_PORT
-DRONE_MYSQL_PORT=@DRONE_HTTP_PORT
+DRONE_MYSQL_PORT=@DRONE_MYSQL_PORT
 DRONE_VAULT_PLUGIN_PORT=@DRONE_VAULT_PLUGIN_PORT
 
 # MYSQL
