add dron agent configuration and modified the setup script accordingly

--- a/src/ci/env.tmpl
+++ b/src/ci/env.tmpl
@@ -7,7 +7,8 @@ DRONE_GIT_PASSWORD=@DRONE_GIT_PASSWORD
 DRONE_GOGS_SERVER=https://git.@YOUR_DOMAIN
 DRONE_RUNNER_CAPACITY=3
 DRONE_SERVER_HOST=ci.@YOUR_DOMAIN
-DRONE_SECRET_KEY=@DRONE_SECRET_KEY
+DRONE_SECRET=@DRONE_SECRET
+DRONE_RPC_SECRET=@DRONE_RPC_SECRET
 
 # VAULT PLUGIN
 VAULT_ADDR=https://vault.@YOUR_DOMAIN
