set pull url for registry ui

--- a/src/registry/env.tmpl
+++ b/src/registry/env.tmpl
@@ -1,5 +1,8 @@
 COMPOSE_FILE=registry_docker_compose.yml
 
+# REGISTRY-UI
+PULL_URL=https://registry.@YOUR_DOMAIN
+
 # STORAGE
 REGISTRY_DATA=@REGISTRY_DATA
 REGISTRY_CONFIG=@REGISTRY_CONFIG
