--- a/src/git/env.tmpl
+++ b/src/git/env.tmpl
@@ -2,15 +2,14 @@ COMPOSE_FILE=git_docker_compose.yml
 
 # STORAGE
 GOGS_DATA=@GOGS_DATA
-GOGS_MYSQL_DATA=@GOGS_MYSQL_DATA
+GOGS_POSTGRESQL_DATA=@GOGS_POSTGRESQL_DATA
 
 # NETWORK
 GOGS_SSH_PORT=@GOGS_SSH_PORT
 GOGS_HTTP_PORT=@GOGS_HTTP_PORT
 
-# MYSQL
-GOGS_MYSQL_PORT=@GOGS_MYSQL_PORT
-GOGS_MYSQL_DATABASE=gogs
-GOGS_MYSQL_USER=gogs
-GOGS_MYSQL_USER_PASSWORD=g09z
-GOGS_MYSQL_ROOT_PASSWORD=r00t
+# POSTGRESQL
+GOGS_POSTGRESQL_PORT=@GOGS_POSTGRESQL_PORT
+GOGS_POSTGRESQL_DATABASE=@GOGS_POSTGRESQL_DATABASE
+GOGS_POSTGRESQL_USER=@GOGS_POSTGRESQL_USER
+GOGS_POSTGRESQL_PASSWORD=$GOGS_POSTGRESQL_PASSWORD
