--- a/src/packages/env.tmpl
+++ b/src/packages/env.tmpl
@@ -11,6 +11,6 @@ PROGET_HTTP_PORT=@PROGET_HTTP_PORT
 PROGET_POSTGRESQL_PORT=@PROGET_POSTGRESQL_PORT
 
 # DB
-PROGET_POSTGRESQL_DATABASE=proget
-PROGET_POSTGRESQL_USER=proget
-PROGET_POSTGRESQL_PASSWORD=r00t
+PROGET_POSTGRESQL_DATABASE=@PROGET_POSTGRESQL_DATABASE
+PROGET_POSTGRESQL_USER=@PROGET_POSTGRESQL_USER
+PROGET_POSTGRESQL_PASSWORD=@PROGET_POSTGRESQL_PASSWORD
