Replace mysql with postgresql for drone setup

--- a/src/ci/env.tmpl
+++ b/src/ci/env.tmpl
@@ -18,13 +18,14 @@ VAULT_TOKEN_TTL=720h
 
 # STORAGE
 DRONE_DATA=@DRONE_DATA
-DRONE_MYSQL_DATA=@DRONE_MYSQL_DATA
+DRONE_POSTGRESQL_DATA=@DRONE_POSTGRESQL_DATA
 
 # NETWORK
 DRONE_HTTP_PORT=@DRONE_HTTP_PORT
-DRONE_MYSQL_PORT=@DRONE_MYSQL_PORT
 DRONE_VAULT_PLUGIN_PORT=@DRONE_VAULT_PLUGIN_PORT
+DRONE_POSTGRESQL_PORT=@DRONE_POSTGRESQL_PORT
 
-# MYSQL
-DRONE_MYSQL_DATABASE=drone
-DRONE_MYSQL_ROOT_PASSWORD=9R0n6
+# POSTGRESQL
+DRONE_POSTGRESQL_DATABASE=@GOGS_POSTGRESQL_DATABASE
+DRONE_POSTGRESQL_USER=@GOGS_POSTGRESQL_USER
+DRONE_POSTGRESQL_PASSWORD=$GOGS_POSTGRESQL_PASSWORD
