Correcting variable names to match the rest of the setup

--- a/src/project/env.tmpl
+++ b/src/project/env.tmpl
@@ -6,13 +6,8 @@ TAIGA_HOST=project.@YOUR_DOMAIN
 TAIGA_SCHEME=https
 TAIGA_BACK_HOST=back
 TAIGA_FRONT_HOST=front
-EVENTS_HOST=events
 TAIGA_SECRET=@TAIGA_SECRET
-STARTUP_TIMEOUT=15s
-
-ENABLE_SSL=no
-# CERT_NAME=fullchain.pem
-# CERT_KEY=privkey.pem
+TAIGA_STARTUP_TIMEOUT=15s
 
 # NETWORK
 
@@ -21,22 +16,20 @@ TAIGA_PROXY_PORT=@TAIGA_PROXY_PORT
 
 #DB
 
-POSTGRES_HOST=db
-POSTGRES_DB=taiga
-POSTGRES_USER=@TAIGA_POSTGRES_USER
-POSTGRES_PASSWORD=@TAIGA_POSTGRES_PASSWORD
+TAIGA_POSTGRES_DB=taiga
+TAIGA_POSTGRES_USER=@TAIGA_POSTGRES_USER
+TAIGA_POSTGRES_PASSWORD=@TAIGA_POSTGRES_PASSWORD
 
 # EVENTS
 
-RABBIT_HOST=rabbit
-RABBIT_USER=@TAIGA_RABBIT_USER
-RABBIT_PASSWORD=@TAIGA_RABBIT_PASSWORD
-RABBIT_VHOST=taiga
+TAIGA_RABBIT_USER=@TAIGA_RABBIT_USER
+TAIGA_RABBIT_PASSWORD=@TAIGA_RABBIT_PASSWORD
+TAIGA_RABBIT_VHOST=taiga
 
 #DATA
 
-TAIGA_DATA_BACK_MEDIA=@TAIGA_DATA_BACK_MEDIA
-TAIGA_DATA_BACK=@TAIGA_DATA_BACK
-TAIGA_DATA_FRONT=@TAIGA_DATA_FRONT
-TAIGA_DATA_DB=@TAIGA_DATA_DB
-TAIGA_DATA_PROXY=@TAIGA_DATA_PROXY
+TAIGA_BACK_MEDIA=@TAIGA_BACK_MEDIA
+TAIGA_BACK_CONF=@TAIGA_BACK_CONF
+TAIGA_FRONT_CONF=@TAIGA_FRONT_CONF
+TAIGA_POSTGRESQL_DATA=@TAIGA_POSTGRESQL_DATA
+TAIGA_PROXY_CONF=@TAIGA_PROXY_CONF
