fix string replace issue and simply the command

--- a/src/git/env.tmpl
+++ b/src/git/env.tmpl
@@ -12,4 +12,4 @@ GOGS_POSTGRESQL_PORT=@GOGS_POSTGRESQL_PORT
 # POSTGRESQL
 GOGS_POSTGRESQL_DATABASE=@GOGS_POSTGRESQL_DATABASE
 GOGS_POSTGRESQL_USER=@GOGS_POSTGRESQL_USER
-GOGS_POSTGRESQL_PASSWORD=$GOGS_POSTGRESQL_PASSWORD
+GOGS_POSTGRESQL_PASSWORD=@GOGS_POSTGRESQL_PASSWORD
