corrected postgresql port mapping for taiga;

--- a/src/project/env.tmpl
+++ b/src/project/env.tmpl
@@ -1,5 +1,6 @@
 COMPOSE_FILE=project_docker_compose.yml
 
+
 #TAIGA
 
 TAIGA_HOST=project.@YOUR_DOMAIN
@@ -9,10 +10,12 @@ TAIGA_FRONT_HOST=front
 TAIGA_SECRET=@TAIGA_SECRET
 TAIGA_STARTUP_TIMEOUT=15s
 
+
 # NETWORK
 
-TAIGA_POSTGRES_PORT=@TAIGA_POSTGRES_PORT
+TAIGA_POSTGRESQL_PORT=@TAIGA_POSTGRESQL_PORT
 TAIGA_PROXY_PORT=@TAIGA_PROXY_PORT
+
 
 #DB
 
@@ -20,11 +23,13 @@ TAIGA_POSTGRES_DB=taiga
 TAIGA_POSTGRES_USER=@TAIGA_POSTGRES_USER
 TAIGA_POSTGRES_PASSWORD=@TAIGA_POSTGRES_PASSWORD
 
+
 # EVENTS
 
 TAIGA_RABBIT_USER=@TAIGA_RABBIT_USER
 TAIGA_RABBIT_PASSWORD=@TAIGA_RABBIT_PASSWORD
 TAIGA_RABBIT_VHOST=taiga
+
 
 #DATA
 
