taiga postgresql parameters mapping

--- a/src/project/env.tmpl
+++ b/src/project/env.tmpl
@@ -19,9 +19,9 @@ TAIGA_PROXY_PORT=@TAIGA_PROXY_PORT
 
 #DB
 
-TAIGA_POSTGRES_DB=taiga
-TAIGA_POSTGRES_USER=@TAIGA_POSTGRES_USER
-TAIGA_POSTGRES_PASSWORD=@TAIGA_POSTGRES_PASSWORD
+TAIGA_POSTGRESQL_DB=taiga
+TAIGA_POSTGRESQL_USER=@TAIGA_POSTGRESQL_USER
+TAIGA_POSTGRESQL_PASSWORD=@TAIGA_POSTGRESQL_PASSWORD
 
 
 # EVENTS
