fixed configuration errors in ci configuration.

--- a/src/ci/env.tmpl
+++ b/src/ci/env.tmpl
@@ -36,6 +36,6 @@ DRONE_POSTGRESQL_PORT=@DRONE_POSTGRESQL_PORT
 
 # POSTGRESQL
 
-DRONE_POSTGRESQL_DATABASE=@GOGS_POSTGRESQL_DATABASE
-DRONE_POSTGRESQL_USER=@GOGS_POSTGRESQL_USER
-DRONE_POSTGRESQL_PASSWORD=$GOGS_POSTGRESQL_PASSWORD
+DRONE_POSTGRESQL_DATABASE=@DRONE_POSTGRESQL_DATABASE
+DRONE_POSTGRESQL_USER=@DRONE_POSTGRESQL_USER
+DRONE_POSTGRESQL_PASSWORD=@DRONE_POSTGRESQL_PASSWORD
