Added Traefik as a proxy Added all proper code for containers to work with traefik

--- a/src/ci/env.tmpl
+++ b/src/ci/env.tmpl
@@ -1,6 +1,9 @@
 COMPOSE_FILE=ci_docker_compose.yml
 
 
+YOUR_DOMAIN=@YOUR_DOMAIN
+
+
 # DRONE
 
 DRONE_USER_CREATE=username:@DRONE_ADMIN_USERNAME,admin:true,token:@DRONE_ADMIN_TOKEN
