Added env variables setup for traefik proxy

--- a/src/proxy/env.tmpl
+++ b/src/proxy/env.tmpl
@@ -5,12 +5,13 @@ YOUR_DOMAIN=@YOUR_DOMAIN
 # CLOUDFLARE
 
 CLOUDFLARE_EMAIL=@CLOUDFLARE_EMAIL
-CLOUDFLARE_API_KEY=@CLOUDFLARE_EMAIL
+CLOUDFLARE_API_KEY=@CLOUDFLARE_API_KEY
+
+# STORAGE
+
+PROXY_LETSENCRYPT_DIR=@PROXY_LETSENCRYPT_DIR
 
 # LETSENCRYPT
 
 LETS_ENCRYPT_EMAIL=@LETS_ENCRYPT_EMAIL
 
-# STORAGE
-
-PROXY_LETSENCRYPT=@PROXY_LETSENCRYPT
