Updated proxy setup

--- a/src/proxy/env.tmpl
+++ b/src/proxy/env.tmpl
@@ -9,7 +9,7 @@ CLOUDFLARE_API_KEY=@CLOUDFLARE_API_KEY
 
 # STORAGE
 
-PROXY_LETSENCRYPT_DIR=@PROXY_LETSENCRYPT_DIR
+PROXY_LETSENCRYPT_SRC=@PROXY_LETSENCRYPT_SRC
 
 # LETSENCRYPT
 
