--- a/src/ci/env.tmpl
+++ b/src/ci/env.tmpl
@@ -1,6 +1,8 @@
 COMPOSE_FILE=ci_docker_compose.yml
 
+
 # DRONE
+
 DRONE_USER_CREATE=username:@DRONE_ADMIN_USERNAME,admin:true,token:@DRONE_ADMIN_TOKEN
 DRONE_GIT_USERNAME=@DRONE_GIT_USERNAME
 DRONE_GIT_PASSWORD=@DRONE_GIT_PASSWORD
@@ -10,22 +12,30 @@ DRONE_SERVER_HOST=ci.@YOUR_DOMAIN
 DRONE_SECRET=@DRONE_SECRET
 DRONE_RPC_SECRET=@DRONE_RPC_SECRET
 
+
 # VAULT PLUGIN
+
 VAULT_ADDR=https://vault.@YOUR_DOMAIN
 VAULT_TOKEN=@VAULT_TOKEN
 VAULT_TOKEN_RENEWAL=720h
 VAULT_TOKEN_TTL=720h
 
+
 # STORAGE
+
 DRONE_DATA=@DRONE_DATA
 DRONE_POSTGRESQL_DATA=@DRONE_POSTGRESQL_DATA
 
+
 # NETWORK
+
 DRONE_HTTP_PORT=@DRONE_HTTP_PORT
 DRONE_VAULT_PLUGIN_PORT=@DRONE_VAULT_PLUGIN_PORT
 DRONE_POSTGRESQL_PORT=@DRONE_POSTGRESQL_PORT
 
+
 # POSTGRESQL
-DRONE_POSTGRESQL_DATABASE=@GOGS_POSTGRESQL_DATABASE
-DRONE_POSTGRESQL_USER=@GOGS_POSTGRESQL_USER
-DRONE_POSTGRESQL_PASSWORD=$GOGS_POSTGRESQL_PASSWORD
+
+DRONE_POSTGRESQL_DATABASE=@DRONE_POSTGRESQL_DATABASE
+DRONE_POSTGRESQL_USER=@DRONE_POSTGRESQL_USER
+DRONE_POSTGRESQL_PASSWORD=@DRONE_POSTGRESQL_PASSWORD
