still working on Traefik setup

--- a/src/proxy/env.tmpl
+++ b/src/proxy/env.tmpl
@@ -1,17 +1,16 @@
-COMPOSE_FILE=git_docker_compose.yml
+
+COMPOSE_FILE=proxy_docker_compose.yml
+
 
 YOUR_DOMAIN=@YOUR_DOMAIN
 
-# CLOUDFLARE
 
-CLOUDFLARE_EMAIL=@CLOUDFLARE_EMAIL
-CLOUDFLARE_API_KEY=@CLOUDFLARE_API_KEY
+# LETS ENCRYPT
+
+DNS_CLOUDFLARE_EMAIL=@DNS_CLOUDFLARE_EMAIL
+DNS_CLOUDFLARE_API_KEY=@DNS_CLOUDFLARE_API_KEY
+LETSENCRYPT_EMAIL=@LETSENCRYPT_EMAIL
 
 # STORAGE
 
-PROXY_LETSENCRYPT_SRC=@PROXY_LETSENCRYPT_SRC
-
-# LETSENCRYPT
-
-LETS_ENCRYPT_EMAIL=@LETS_ENCRYPT_EMAIL
-
+LETSENCRYPT_ROOT=@LETSENCRYPT_ROOT
