--- a/src/git/env.tmpl
+++ b/src/git/env.tmpl
@@ -4,17 +4,21 @@ COMPOSE_FILE=git_docker_compose.yml
 YOUR_DOMAIN=@YOUR_DOMAIN
 
 
-# CLOUDFLARE
-
-CLOUDFLARE_EMAIL=@CLOUDFLARE_EMAIL
-CLOUDFLARE_API_KEY=@CLOUDFLARE_EMAIL
-
-
-# LETSENCRYPT
-
-LETS_ENCRYPT_EMAIL=@LETS_ENCRYPT_EMAIL
-
-
 # STORAGE
 
-PROXY_LETSENCRYPT=@PROXY_LETSENCRYPT
+GOGS_DATA=@GOGS_DATA
+GOGS_POSTGRESQL_DATA=@GOGS_POSTGRESQL_DATA
+
+
+# NETWORK
+
+GOGS_SSH_PORT=@GOGS_SSH_PORT
+GOGS_HTTP_PORT=@GOGS_HTTP_PORT
+GOGS_POSTGRESQL_PORT=@GOGS_POSTGRESQL_PORT
+
+
+# POSTGRESQL
+
+GOGS_POSTGRESQL_DATABASE=@GOGS_POSTGRESQL_DATABASE
+GOGS_POSTGRESQL_USER=@GOGS_POSTGRESQL_USER
+GOGS_POSTGRESQL_PASSWORD=@GOGS_POSTGRESQL_PASSWORD
