Updating proxy docker setup, env and compose to include secrets file

--- a/src/proxy/env.tmpl
+++ b/src/proxy/env.tmpl
@@ -4,6 +4,10 @@ COMPOSE_FILE=proxy_docker_compose.yml
 
 YOUR_DOMAIN=@YOUR_DOMAIN
 
+# TRAEFIK
+
+TRAEFIK_CONFIG=@TRAEFIK_CONFIG
+
 
 # LETS ENCRYPT
 
