request a wildcard certificate

--- a/src/proxy/env.tmpl
+++ b/src/proxy/env.tmpl
@@ -4,17 +4,18 @@ COMPOSE_FILE=proxy_docker_compose.yml
 
 YOUR_DOMAIN=@YOUR_DOMAIN
 
+
 # TRAEFIK
 
 TRAEFIK_CONFIG=@TRAEFIK_CONFIG
 
 
+# CLOUDFLARE
+CLOUDFLARE_EMAIL=@CLOUDFLARE_EMAIL
+CLOUDFLARE_API_KEY=@CLOUDFLARE_API_KEY
+
+
 # LETS ENCRYPT
 
-DNS_CLOUDFLARE_EMAIL=@DNS_CLOUDFLARE_EMAIL
-DNS_CLOUDFLARE_API_KEY=@DNS_CLOUDFLARE_API_KEY
 LETSENCRYPT_EMAIL=@LETSENCRYPT_EMAIL
-
-# STORAGE
-
 LETSENCRYPT_ROOT=@LETSENCRYPT_ROOT
