store cloudflare api settings an the letsencrypt cert in separate folders; reorganize the vault setup.

--- a/src/proxy/env.tmpl
+++ b/src/proxy/env.tmpl
@@ -1,4 +1,3 @@
-
 COMPOSE_FILE=proxy-docker-compose.yml
 
 
@@ -8,9 +7,11 @@ YOUR_DOMAIN=@YOUR_DOMAIN
 # TRAEFIK
 
 TRAEFIK_CONFIG=@TRAEFIK_CONFIG
+TRAEFIK_LETSENCRYPT=@TRAEFIK_LETSENCRYPT
 
 
 # CLOUDFLARE
+
 CLOUDFLARE_EMAIL=@CLOUDFLARE_EMAIL
 CLOUDFLARE_API_KEY=@CLOUDFLARE_API_KEY
 
@@ -18,4 +19,3 @@ CLOUDFLARE_API_KEY=@CLOUDFLARE_API_KEY
 # LETS ENCRYPT
 
 LETSENCRYPT_EMAIL=@LETSENCRYPT_EMAIL
-LETSENCRYPT_ROOT=@LETSENCRYPT_ROOT
