--- a/src/vault/env.tmpl
+++ b/src/vault/env.tmpl
@@ -15,4 +15,4 @@ VAULT_CONSUL_DATA=@VAULT_CONSUL_DATA
 # NETWORK
 
 VAULT_PORT=@VAULT_PORT
-CONSUL_PORT=@CONSUL_PORT
+VAULT_CONSUL_PORT=@VAULT_CONSUL_PORT
