short circuit port to localhost for blocking external access

--- a/src/ci/env.tmpl
+++ b/src/ci/env.tmpl
@@ -32,9 +32,9 @@ DRONE_POSTGRESQL_DATA=@DRONE_POSTGRESQL_DATA
 
 # NETWORK
 
-DRONE_HTTP_PORT=@DRONE_HTTP_PORT
-DRONE_VAULT_PLUGIN_PORT=@DRONE_VAULT_PLUGIN_PORT
-DRONE_POSTGRESQL_PORT=@DRONE_POSTGRESQL_PORT
+DRONE_HTTP_PORT_BINDING=@DRONE_HTTP_PORT_BINDING
+DRONE_VAULT_PLUGIN_PORT_BINDING=@DRONE_VAULT_PLUGIN_PORT_BINDING
+DRONE_POSTGRESQL_PORT_BINDING=@DRONE_POSTGRESQL_PORT_BINDING
 
 
 # POSTGRESQL
