--- a/src/git/env.tmpl
+++ b/src/git/env.tmpl
@@ -12,9 +12,9 @@ GOGS_POSTGRESQL_DATA=@GOGS_POSTGRESQL_DATA
 
 # NETWORK
 
-GOGS_SSH_PORT=@GOGS_SSH_PORT
-GOGS_HTTP_PORT=@GOGS_HTTP_PORT
-GOGS_POSTGRESQL_PORT=@GOGS_POSTGRESQL_PORT
+GOGS_SSH_PORT_BINDING=@GOGS_SSH_PORT_BINDING
+GOGS_HTTP_PORT_BINDING=@GOGS_HTTP_PORT_BINDING
+GOGS_POSTGRESQL_PORT_BINDING=@GOGS_POSTGRESQL_PORT_BINDING
 
 
 # POSTGRESQL
