--- a/src/packages/env.tmpl
+++ b/src/packages/env.tmpl
@@ -14,8 +14,8 @@ PROGET_POSTGRESQL_DATA=@PROGET_POSTGRESQL_DATA
 
 # NETWORK
 
-PROGET_HTTP_PORT=@PROGET_HTTP_PORT
-PROGET_POSTGRESQL_PORT=@PROGET_POSTGRESQL_PORT
+PROGET_HTTP_PORT_BINDING=@PROGET_HTTP_PORT_BINDING
+PROGET_POSTGRESQL_PORT_BINDING=@PROGET_POSTGRESQL_PORT_BINDING
 
 
 # DB
