--- a/src/project/env.tmpl
+++ b/src/project/env.tmpl
@@ -14,8 +14,8 @@ TAIGA_STARTUP_TIMEOUT=15s
 
 # NETWORK
 
-TAIGA_POSTGRESQL_PORT=@TAIGA_POSTGRESQL_PORT
-TAIGA_PROXY_PORT=@TAIGA_PROXY_PORT
+TAIGA_POSTGRESQL_PORT_BINDING=@TAIGA_POSTGRESQL_PORT_BINDING
+TAIGA_PROXY_PORT_BINDING=@TAIGA_PROXY_PORT_BINDING
 
 
 # DB
@@ -30,7 +30,9 @@ TAIGA_POSTGRESQL_PASSWORD=@TAIGA_POSTGRESQL_PASSWORD
 TAIGA_RABBIT_USER=@TAIGA_RABBIT_USER
 TAIGA_RABBIT_PASSWORD=@TAIGA_RABBIT_PASSWORD
 
+
 # CACHE
+
 TAIGA_REDIS_PASSWORD=@TAIGA_REDIS_PASSWORD
 
 
