--- a/src/registry/env.tmpl
+++ b/src/registry/env.tmpl
@@ -17,5 +17,5 @@ REGISTRY_CONFIG=@REGISTRY_CONFIG
 
 #NETWORK
 
-REGISTRY_PORT=@REGISTRY_PORT
-REGISTRY_UI_PORT=@REGISTRY_UI_PORT
+REGISTRY_PORT_BINDING=@REGISTRY_PORT_BINDING
+REGISTRY_UI_PORT_BINDING=@REGISTRY_UI_PORT_BINDING
