--- a/src/vault/env.tmpl
+++ b/src/vault/env.tmpl
@@ -14,5 +14,5 @@ VAULT_CONSUL_DATA=@VAULT_CONSUL_DATA
 
 # NETWORK
 
-VAULT_PORT=@VAULT_PORT
-CONSUL_PORT=@CONSUL_PORT
+VAULT_PORT_BINDING=@VAULT_PORT_BINDING
+VAULT_CONSUL_PORT_BINDING=@VAULT_CONSUL_PORT_BINDING
